--- a/roles/001_create_vm_prox/meta/main.yml
+++ b/roles/001_create_vm_prox/meta/main.yml
@@ -1,7 +1,6 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Hazem Hemied
+  description: cloud consultatn
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -47,6 +46,8 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
+  collections:
+    - community.general.proxmox
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
