--- a/roles/001_create_vm_prox/tasks/main.yml
+++ b/roles/001_create_vm_prox/tasks/main.yml
@@ -1,16 +1,13 @@
 ---
 - name: Create new vm
-  proxmox:
-    host_name: player01.dev.cloudcenter.internal
+  proxmox_kvm:
+    name: player01.dev.cloudcenter.internal
     api_user: "{{ api_user }}"
     api_password: "{{ api_password }}"
     api_host: "{{ api_host }}"
-    #    hostname: "{{ inventory_hostname }}"
-    node: "hetz"
-    clone: "ansi-client"
-    cores: "2"
-    cpu: "1"
-    full: true
-    memory: 1024
+    clone: o
+    storage: "local-lvm"
+    target: "hetz"
+    timeout: 500
     description: created with ansible
   delegate_to: localhost
