--- a/roles/001_create_vm_prox/tasks/main.yml
+++ b/roles/001_create_vm_prox/tasks/main.yml
@@ -8,6 +8,7 @@
     clone: o
     storage: "local-lvm"
     target: "hetz"
+    node: "hetz"
     timeout: 500
     description: created with ansible
   delegate_to: localhost
